--- a/home/index.html
+++ b/home/index.html
@@ -12,14 +12,28 @@
 <body>
     <header>
         <nav class="topnav">
-                <img src="images/logo.png" alt="Blue Jhae WebNests">
+                <a href="../images/borb.jpg"><img src="../images/logo.png" alt="Blue Jhae WebNests"></a>
             <ul>
-                <li><a href="#">Overview</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Reviews</a></li>
+                <li><a href="../home/index.html">Home</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="../reviews/index.html">Reviews</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
+
+    <article>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione facere dolore recusandae earum nihil beatae quis vel alias quia distinctio. Reiciendis ex officia adipisci soluta nihil voluptatum veritatis nobis recusandae?
+    </article>
+
+    <section id="gallery">
+        <figure>
+            <img src="../images/borb.jpg"><br>
+            <span>
+                It says "gullible" in
+            </span>
+            <a href="../sample1/index.html">this page</a>
+        </figure>
+    </section>
 </body>
 </html>
