--- a/reviews/index.html
+++ b/reviews/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <article>
-        <span>It's terrible</span>
+        <span>It's terrible :D</span>
     </article>
 
 </body>
