Last minute fixes

--- a/home/index.html
+++ b/home/index.html
@@ -141,7 +141,7 @@
                     <a href="../sample3/index.html" class="gallery-link">
                         <figure>
                             <img src="../images/sample3.jpg" alt="Project Sample 3">
-                            <figcaption>Sample Project 3, click to view</figcaption>
+                            <figcaption>Jollibee, click to view</figcaption>
                         </figure>
                     </a>
 
