2nd last minute fix
sample 3 image being blocked by CORB

--- a/home/index.html
+++ b/home/index.html
@@ -140,7 +140,7 @@
 
                     <a href="../sample3/index.html" class="gallery-link">
                         <figure>
-                            <img src="../images/sample3.jpg" alt="Project Sample 3">
+                            <img src="../images/chickenyummy.jpg" alt="Project Sample 3">
                             <figcaption>Jollibee, click to view</figcaption>
                         </figure>
                     </a>
